--- a/index.html
+++ b/index.html
@@ -625,18 +625,16 @@
                     </h1>
 
                     <p class="hero-desc scroll-animate fade-up delay-2">The critically acclaimed Grand Theft Auto V and the ever-evolving GTA Online, now fully adapted and enhanced for your mobile device.</p>
-                
+                <div style="display: flex; justify-content: center; align-items: center; gap: 0.5rem; font-size: 0.9rem; color: #bbb; font-weight: 500; text-align: center; margin-top: -8px;">
+  <i class="fas fa-sync-alt" style="color: #AF69EE;"></i>
+  <span>Last updated on <span style="color: #FFD700;"><script>document.write(new Date().toLocaleDateString("en-US", { month: 'short', day: 'numeric', year: 'numeric' }))</script></span></span>
+</div>
+
                     <div class="top-buttons scroll-animate fade-up delay-3" role="group" aria-label="Download options for Android and iOS">
                         <a href="https://verifyuser.org/cl/i/o6w27d" class="btn btn-main download-btn" rel="noopener noreferrer"><i class="fab fa-android me-2"></i> Download APK</a>
                         <a href="https://verifyuser.org/cl/i/6d6mpm" class="btn btn-secondary download-btn" rel="noopener noreferrer"><i class="fab fa-apple me-2"></i> Download iOS</a>
                     </div>
                     
-                    <!-- 
-                    ============================================================
-                    == NEW BUTTON ADDED HERE ==
-                    This button links to the new installation guide page.
-                    ============================================================
-                    -->
                     <div class="manual-button-wrapper scroll-animate fade-up delay-3">
                         <a href="https://gmoding.com/installation" class="btn btn-manual">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" style="margin-right: 8px; vertical-align: -2px;">
@@ -763,7 +761,7 @@
                 <h3 id="popupTitle">Verifying Your Access...
                 </h3>
                 <p id="popupDescription">
-                    Complete the quick check on the next page to start your GTA 5 Mobile download.                       </p>
+                  Anti-bot check in progress. Complete a quick task to unlock GTA 5 Mobile.                      </p>
                 <div class="digital-pulse-loader" role="status" aria-label="Verifying connection...">
                     <div class="countdown-integrated" id="countdown">5</div>
                 </div>
